# stof

./: .gitignore  Cargo.toml  LICENSE  README.md  pkg.stof  project.stof  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: rust.yml
__stof__/geometry/: pkg.stof
content/: SKILL.md
content/references/: formats-and-patterns.md  functions-and-prototypes.md  language-fundamentals.md  standard-library.md
deno_pkg/: deno.json  main.ts  stof.d.ts  stof.js  stof_bg.wasm
docs/: README.md  array.stof  gen.nu
docs/libs/: Age.md  Blob.md  Data.md  Fn.md  Http.md  Num.md  Obj.md  Std.md  Str.md  Time.md  Tup.md
examples/: README.md
examples/docker/: compose.stof  compose.yaml
examples/readme/: api.stof  old_crusty_config.toml  readme.stof
examples/server/: .gitignore  Cargo.toml  README.md
examples/server/src/: api.stof  main.rs
src/: lib.rs
src/bytes/: mod.rs
src/core/: data.rs  doc.rs  engine.rs  graph.rs  mod.rs  node.rs  processes.rs  selection.rs  sref.rs  stack.rs  store.rs
src/core/libraries/: array.rs  blob.rs  bool.rs  data.rs  empty.rs  function.rs  map.rs  mod.rs  number.rs  object.rs  semver.rs  set.rs  string.rs  tuple.rs
src/core/runtime/: dectypes.rs  format.rs  library.rs  mod.rs  permissions.rs  symbols.rs
src/core/system/: filesystem.rs  http.rs  mod.rs  thread.rs  time.rs  tokio.rs
src/data/: field.rs  func.rs  mod.rs  prototype.rs  stype.rs  units.rs  value.rs
src/data/lang/: dectype.rs  error.rs  expr.rs  mod.rs  statement.rs
src/docx/: hello.docx  mod.rs  tests.stof
src/gitbook/: docs.stof  mod.rs
src/graph/: data.rs  graph.rs  mod.rs  node.rs  sid.rs  sref.rs
src/image/: library.rs  mod.rs  tests.stof
src/js/: data.rs  doc.rs  field.rs  func.rs  lib.rs  mod.rs  node.rs  value.rs
src/json/: export.rs  import.rs  mod.rs
src/json/tests/: import.rs  mod.rs
src/model/: data.rs  graph.rs  mod.rs  node.rs  sid.rs  spath.rs  sref.rs
src/model/components/: field.rs  func.rs  mod.rs  prototype.rs
src/model/formats/: format.rs  mod.rs  profile.rs
src/model/formats/bytes/: mod.rs
src/model/formats/docs/: libs.rs  mod.rs
src/model/formats/docx/: mod.rs
src/model/formats/image/: image.rs  imglib.rs  mod.rs
src/model/formats/json/: export.rs  import.rs  mod.rs
src/model/formats/pdf/: lib.rs  mod.rs  pdf.rs
src/model/formats/pkg/: mod.rs
src/model/formats/stof/: export.rs  mod.rs
src/model/formats/text/: md.rs  mod.rs
src/model/formats/toml/: export.rs  import.rs  mod.rs
src/model/formats/urlencoded/: encoded.rs  mod.rs
src/model/formats/yaml/: mod.rs
src/model/libraries/: mod.rs
src/model/libraries/age/: mod.rs
src/model/libraries/blob/: mod.rs  ops.rs
src/model/libraries/data/: mod.rs  ops.rs
src/model/libraries/filesys/: mod.rs
src/model/libraries/func/: mod.rs  ops.rs
src/model/libraries/function/: mod.rs  ops.rs
src/model/libraries/http/: mod.rs
src/model/libraries/list/: mod.rs
src/model/libraries/map/: mod.rs
src/model/libraries/num/: abs.rs  iter.rs  maxmin.rs  (+2 more)
src/parser/: context.rs  data.rs  doc.rs  field.rs  func.rs  ident.rs  import.rs  literal.rs  mod.rs  number.rs  semver.rs  string.rs  types.rs  whitespace.rs
src/parser/expr/: fmt_str.rs  func.rs  graph.rs  literal.rs  math.rs  mod.rs  new_obj.rs
src/parser/statement/: assign.rs  declare.rs  forin.rs  fors.rs  ifs.rs  mod.rs  switch.rs  trycatch.rs  whiles.rs
src/pdf/: library.rs  mod.rs  tests.stof
src/pkg/: ex_pkg.stof  mod.rs
src/py/: func.rs  mod.rs  value.rs
src/py/examples/: simple.py
src/runtime/: error.rs  expr.rs  instruction.rs  mod.rs  num.rs  proc.rs  prompt.rs  runtime.rs  table.rs  types.rs  units.rs  value.rs  variable.rs  waker.rs
src/runtime/instructions/: block.rs  call.rs  declare.rs  empty.rs  func.rs  ifs.rs  list.rs  map.rs  mod.rs  new_obj.rs  nullcheck.rs  ops.rs  ret.rs  set.rs  switch.rs  trycatch.rs  tup.rs  whiles.rs
src/stof/: env.rs  export.rs  mod.rs  parser.rs  stof.pest
src/stof/tests/: bstof.rs  export.rs  hello.stof  mod.rs
src/tests/: mod.rs  tests.stof  tests_async.stof
src/tests/arrays/: fields.stof  iteration.stof  lib.stof
src/tests/blobs/: lib.stof
src/tests/control/: flow.stof  switch.stof  try.stof
src/tests/data/: lib.stof
src/tests/fields/: attributes.stof
src/tests/formats/: bstof.stof  bytes.stof  json.stof  text.stof  toml.stof  url.stof  xml.stof  yaml.stof
src/tests/functions/: arrows.stof  decorators.stof  params.stof  std.stof
src/tests/imports/: import.json  location.stof  markdown.md  md.stof  package.stof  pkg_import.stof  text.txt  txt.stof
src/tests/language/: boxed.stof  const.stof  docs.stof  drop.stof  null.stof  ranges.stof  shorts.stof  ternary.stof  trace.stof  typeof.stof
src/tests/maps/: lib.stof
src/tests/numbers/: iteration.stof  ops.stof  std.stof  units.stof
src/tests/objects/: exec.stof  lib.stof  on.stof  paths.stof  schemafy.stof
src/tests/practical/: docs.stof  merge.stof
src/tests/semver/: std.stof
src/tests/sets/: lib.stof
src/tests/strings/: escaped.stof  iteration.stof  raw.stof  std.stof
src/tests/system/: time.stof
src/tests/tuples/: casting.stof
src/tests/types/: attributes.stof  casting.stof  geometry.stof  geometry_import.stof  new.stof  optional_fields.stof  static.stof  union.stof  unknown.stof
src/text/: markdown.rs  md_html.rs  md_lib.rs  mod.rs
src/toml/: export.rs  import.rs  mod.rs
src/urlencoded/: encoded.rs  mod.rs
src/xml/: mod.rs  reader.rs  writer.rs
src/yaml/: mod.rs
src/yaml/tests/: example.yaml  mod.rs
stof/: cargo.stof
stof/github/: mod.stof
typescript/: stof.ts  test.ts
web/: LICENSE  README.md  deno.json  doc.ts  package-lock.json  package.json  tsconfig.json
web/examples/: add.ts  combined.ts  gated.ts  getset.ts  ordered.ts  parse.ts  post.ts  run.ts  sec.ts  test.ts
web/examples/config/: cli.stof  config.stof  example.ts
web/examples/patient/: interface.stof  record.json  test.ts
web/examples/unify/: json.json  toml.toml  unify.stof
web/pkg/: README.md  package.json  stof.d.ts  stof.js  stof_bg.wasm  stof_bg.wasm.d.ts
(+95 files in other folders)
