[package]
name = "stof"
version = "0.4.4"
edition = "2021"
authors = ["CJ Cummings <cj@formata.io>"]
description = "A simple and embeddable data runtime."
license = "Apache-2.0"
repository = "https://github.com/dev-formata-io/stof"
homepage = "https://docs.stof.dev"
keywords = ["stof", "language", "embedded", "api"]
categories = ["data-structures", "development-tools"]

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["json", "toml", "yaml", "xml", "urlencoded", "markdown", "pkg"]

# Default formats
json = ["dep:serde_json"]
toml = ["dep:toml"]
yaml = ["json", "dep:serde_yaml"]
xml = ["json", "dep:quick-xml", "dep:serde-xml-rs"]
urlencoded = ["json", "dep:urlencoding"]
markdown = []
pkg = ["dep:zip", "dep:regex", "dep:walkdir"]

# Not included by default
thread = []
image = ["dep:image"]
docx = ["dep:docx-rs", "json"]
pdf = ["dep:lopdf", "image"]
http = ["dep:ureq"]
markdown-lib = ["dep:markdown", "json"]

# WebAssembly Interface feature - no default file system lib, add "json" dependency, and "wasm-bindgen"
wasm = ["json", "dep:js-sys", "dep:serde-wasm-bindgen", "dep:wasm-bindgen"]

[dependencies]
anyhow = "1.0.94"
base64 = "0.22.1"
bincode = "1.3.3"
bytes = "1.9.0"
colored = "2.1.0"
docx-rs = { version = "0.4.17", optional = true }
getrandom = { version = "0.2.15", features = ["js"] }
image = { version = "0.25.6", features = ["serde"], optional = true }
js-sys = { version = "0.3.76", optional = true }
lazy_static = "1.5.0"
markdown = { version = "1.0.0", features = ["serde"], optional = true }
nanoid = "0.4.0"
lopdf = { version = "0.36.0", features = ["serde"], optional = true }
pest = "2.7.15"
pest_derive = "2.7.15"
quick-xml = { version = "0.37.1", optional = true }
regex = { version = "1.11.1", optional = true }
serde = { version = "1.0.215", features = ["derive", "rc"] }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
serde-xml-rs = { version = "0.6.0", optional = true }
serde_json = { version = "1.0.133", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
toml = { version = "0.8.19", optional = true }
typetag = "0.2.20"
ureq = { version = "2.12.1", optional = true }
urlencoding = { version = "2.1.3", optional = true }
walkdir = { version = "2.5.0", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
zip = { version = "3.0.0", optional = true }
chrono = "0.4.41"
