[package]
name = "stof"
version = "0.8.9"
edition = "2021"
authors = ["CJ Cummings <cj@formata.io>"]
description = "A simple and embeddable data runtime."
license = "Apache-2.0"
repository = "https://github.com/dev-formata-io/stof"
homepage = "https://docs.stof.dev"
keywords = ["stof", "language", "embedded", "interpreter", "document"]
categories = ["compilers", "data-structures", "development-tools"]

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["basic"]
basic = ["stof_std", "system", "pkg"]
full = ["stof_std", "system", "pkg", "image", "docx", "pdf", "http"]

stof_std = []
system = []
pkg = ["dep:zip", "dep:regex", "dep:walkdir"]
image = ["dep:image"]
docx = ["dep:docx-rs"]
pdf = ["dep:lopdf", "image"]
http = ["dep:reqwest", "dep:tokio"]

[dependencies]
anyhow = "1.0.94"
base64 = "0.22.1"
bincode = "1.3.3"
bytes = { version = "1.10.1", features = ["serde"] }
colored = "2.1.0"
docx-rs = { version = "0.4.17", optional = true }
getrandom = { version = "0.2.15", features = ["js"] }
image = { version = "0.25.6", features = ["serde"], optional = true }
lazy_static = "1.5.0"
markdown = { version = "1.0.0", features = ["serde"] }
nanoid = "0.4.0"
lopdf = { version = "0.36.0", features = ["serde"], optional = true }
regex = { version = "1.11.1", optional = true }
serde = { version = "1.0.215", features = ["derive", "rc"] }
serde_json = { version = "1.0.14" }
serde_yaml = { version = "0.9.34" }
toml = { version = "0.8.19" }
typetag = "0.2.20"
urlencoding = { version = "2.1.3" }
walkdir = { version = "2.5.0", optional = true }
zip = { version = "3.0.0", optional = true }
chrono = "0.4.41"
tokio = { version = "1.45.0", features = ["full"], optional = true }
reqwest = { version = "0.12.15", optional = true }
rustc-hash = "2.1.1"
imbl = { version = "5.0.0", features = ["serde", "triomphe"] }
arcstr = { version = "1.2.0", features = ["serde"] }
nom = "8.0.0"
parking_lot = { version = "0.12.4", features = ["serde"] }
